fix: sidebar overflow:hidden

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -575,7 +575,9 @@ a:hover{
 .burger-icon:hover > .bar-3{
   background-color: var(--main-color);
 }
-
+.burger-menu{
+  display: none;
+}
 .burger-icon.open .bar-1 {
   transform: rotate(-45deg) translate(-10px, 10px);
 }
